# msoffice2pdf

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/: __init__.py  msoffice_to_pdf.py
src/msoffice2pdf/: __init__.py
src/msoffice2pdf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
