[metadata]
name = msoffice2pdf
version = 0.0.7
author = Robson Soares de Lima
author_email = robsonlimadeveloper@gmail.com
description = This package aims to convert Office file types to PDF using Microsoft Office or LibreOffice.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robsonlimadeveloper/msoffice2pdf
project_urls =
    Bug Tracker = https://github.com/robsonlimadeveloper/msoffice2pdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Win32 (MS Windows)
	Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: Software Development
	Topic :: Office/Business :: Office Suites
	Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Filesystems
    Topic :: Utilities
    Topic :: Text Processing :: General

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src